--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Menu_Activity"></activity>
-        <activity android:name=".Login_Activity" />
+        <activity android:name=".Menu_Activity" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity android:name=".Login_Activity" android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
         <activity
             android:name=".Splash_Activity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
